fixed input overflow

--- a/src/style.css
+++ b/src/style.css
@@ -96,9 +96,13 @@ body {
   border-radius: 3px;
 }
 
+.flex {
+  display: flex;
+}
+
 .search-field {
   box-sizing: border-box;
-  width: calc(100% - 1px);
+  width: 100%;
   padding: 0;
   border: none;
   outline: none;
